# archivey

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: deploy-docs.yml  deploy-pypi.yml  lint.yml  tox-tests.yml
docs/: api.md  developer_guide.md  generate_api_docs.sh  index.md  user_guide.md
docs_templates/python/material/: class.html.jinja
docs_templates/python/material/_fragments/: enum_members_table.html.jinja
scripts/: check_api_doc.py  griffe_extensions.py  install_unrar.sh
src/archivey/: __init__.py  __main__.py  archive_reader.py  config.py  core.py  exceptions.py  filters.py  types.py
src/archivey/formats/: compressed_streams.py  folder_reader.py  format_detection.py  rar_reader.py  sevenzip_reader.py  single_file_reader.py  tar_reader.py  zip_reader.py
src/archivey/internal/: archive_stream.py  base_reader.py  cli.py  dependency_checker.py  extraction_helper.py  io_helpers.py  utils.py
stubs/: brotli.pyi
tests/: create_corrupted_archives.py
tests/archivey/: conftest.py  create_archives.py  sample_archives.py  test_cli.py  test_config.py  test_corrupted_archives.py  test_encrypted_archives.py  test_extractall.py  test_filters.py  test_io_helpers.py  test_missing_packages.py  test_nested_compressed_archives.py  test_open_compressed_stream.py  test_open_member.py  test_open_nonseekable.py  test_open_stream.py  test_open_url.py  test_path_traversal.py  test_read_archives.py  test_small_reads.py  test_statsio.py  test_streaming_modes.py  test_usage_errors.py  test_zip_extra_fields.py  testing_utils.py
tests/test_archives/: basic_nonsolid__.rar  basic_nonsolid__7zcmd.7z  basic_nonsolid__py7zr.7z  basic_nonsolid__rar4.rar  basic_solid__.rar  basic_solid__.tar.br  basic_solid__.tar.bz2  basic_solid__.tar.lz  basic_solid__.tar.lz4  basic_solid__.tar.xz  basic_solid__.tar.zz  basic_solid__7zcmd.7z  basic_solid__py7zr.7z  basic_solid__rar4.rar  basic_solid__tarcmd.tar  basic_solid__tarcmd.tar.Z  basic_solid__tarcmd.tar.zst  basic_solid__tarfile.tar  basic_solid__tarfile.tar.zst  comment__.rar  comment__rar4.rar  duplicate_files__.rar  duplicate_files__7zcmd.7z  duplicate_files__py7zr.7z  duplicate_files__rar4.rar  duplicate_files__tarfile.tar  encoding__.rar  encoding__7zcmd.7z  encoding__py7zr.7z  encoding__rar4.rar  encoding__tarcmd.tar  encoding__tarcmd.tar.zst  encoding__tarfile.tar  encoding__tarfile.tar.zst  encoding_comment__.rar  encoding_comment__rar4.rar  encrypted_header__.rar  encrypted_header__7zcmd.7z  encrypted_header__py7zr.7z  encrypted_header__rar4.rar  (+101 more)
tests/test_archives_before_refactor/: basic.rar
